--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
 
-    <link rel="stylesheet" href="/src/styles/styles.css"> </head>
+    <link rel="stylesheet" href="/styles/styles.css"> </head>
   <body>
     <a href="#main-content" class="skip-link">Lompat ke Konten Utama</a>
     <main id="main-content"> </main>
